[gd_scene load_steps=3 format=2]

[ext_resource path="res://Flag.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]

[node name="Flag" type="Node2D"]
script = ExtResource( 1 )
color = Color( 1, 0, 0, 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2( 0.666667, 1 )
polygon = PoolVector2Array( -3, 0, 0, 6, 3, 0 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CaptureTimer" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="CaptureTimer" to="." method="_on_CaptureTimer_timeout"]
